--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>com.github.royalflushdtd</groupId>
     <artifactId>pg-sync-hijacker</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>hijacker-demo</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
